--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.1.1
+asgiref==3.5.2
 async-timeout==4.0.2
 billiard==3.6.4.0
 black==22.3.0
@@ -26,6 +27,7 @@ psycopg2==2.9.3
 py==1.11.0
 pymetasploit3==1.0.3
 pyparsing==3.0.9
+python-decouple==3.6
 pytz==2022.1
 redis==4.3.3
 requests==2.28.0
